--- a/account_online_sync_ar/i18n/account_online_sync_ar.pot
+++ b/account_online_sync_ar/i18n/account_online_sync_ar.pot
@@ -226,7 +226,11 @@ msgid "Actualizar Credencial del Banco"
 msgstr ""
 
 #. module: account_online_sync_ar
-#: code:addons/account_online_sync_ar/models/account_online_provider.py:0
+#: model_terms:ir.ui.view,arch_db:account_online_sync_ar.online_provider_account_form_view
+msgid "Add/Configure accounts"
+msgstr ""
+
+#. module: account_online_sync_ar
 #: code:addons/account_online_sync_ar/models/account_online_provider.py:0
 #, python-format
 msgid "An error has occurred (code %s)"
@@ -236,6 +240,11 @@ msgstr ""
 #: code:addons/account_online_sync_ar/models/account_online_provider.py:0
 #, python-format
 msgid "Bad Request."
+msgstr ""
+
+#. module: account_online_sync_ar
+#: model_terms:ir.ui.view,arch_db:account_online_sync_ar.online_provider_account_form_view
+msgid "Check Status"
 msgstr ""
 
 #. module: account_online_sync_ar
@@ -596,7 +605,7 @@ msgstr ""
 
 #. module: account_online_sync_ar
 #: model_terms:ir.ui.view,arch_db:account_online_sync_ar.online_provider_account_form_view
-msgid "Update Credential"
+msgid "Update Password"
 msgstr ""
 
 #. module: account_online_sync_ar
@@ -625,4 +634,10 @@ msgstr ""
 msgid ""
 "WrongSite - The given credentials seem to be valid but they belong to a "
 "different site from the same organization."
+msgstr ""
+
+#. module: account_online_sync_ar
+#: code:addons/account_online_sync_ar/models/account_online_provider.py:0
+#, python-format
+msgid "We don't find any new account to add / configure"
 msgstr ""
