[IMP] account_online_sync_ar: update message for 501 error
The last message was the same as the one un synfcy but it is actually a
consuing message. The 501 will not be solve in 15 minutos, need to wait
a day or force a new sync.

X-original-commit: 88289cfeb1093eeee91026fa4025036476f34adb
Part-of: ingadhoc/enterprise-extensions#123

--- a/account_online_sync_ar/i18n/account_online_sync_ar.pot
+++ b/account_online_sync_ar/i18n/account_online_sync_ar.pot
@@ -197,8 +197,7 @@ msgstr ""
 #, python-format
 msgid ""
 "501: Unavailable - The instituion has informed to us that there was a "
-"problem in the connection. Please wait 15 minutes and try again. If the "
-"problem persists contact Technical Support."
+"problem in the connection"
 msgstr ""
 
 #. module: account_online_sync_ar
