--- a/account_online_sync_ar/i18n/es.po
+++ b/account_online_sync_ar/i18n/es.po
@@ -407,6 +407,13 @@ msgid ""
 msgstr "Paybook fetch: Por favor comuniquese con tu Proveedor de Odoo. Esto es lo que obtenemos "
 
 #. module: account_online_sync_ar
+#: model:ir.actions.server,name:account_online_sync_ar.ir_cron_paybook_update_transactions_ir_actions_server
+#: model:ir.cron,cron_name:account_online_sync_ar.ir_cron_paybook_update_transactions
+#: model:ir.cron,name:account_online_sync_ar.ir_cron_paybook_update_transactions
+msgid "Paybook: Update transactions"
+msgstr "Paybook: Actualizar transacciones"
+
+#. module: account_online_sync_ar
 #: code:addons/account_online_sync_ar/models/account_online_provider.py:0
 #, python-format
 msgid "Payment Required"
@@ -461,6 +468,20 @@ msgid "There is not account credential to be deleted"
 msgstr "No hay cuenta/credencial para ser borrada"
 
 #. module: account_online_sync_ar
+#: code:addons/account_online_sync_ar/models/account_online_journal.py:0
+#, python-format
+msgid ""
+"These transactions have been deleted or disable by the bank provider, please"
+" review them and if needed unreconcile them, delete them and try to "
+"reconcile with the proper bank statement line. You can check this in action "
+"menu \"Find possible duplicates\""
+msgstr ""
+"Estas transacciones han sido eliminadas o deshabilitadas por el proveedor del banco, por favor"
+" reviselas y si es necesario desconcilielas, eliminelas e intente conciliarlas "
+"nuevamente con la linea de extracto bancario mas apropiada. Puede revisar esto en el menú "
+"acción  \"Encontrar posibles duplicados\""
+
+#. module: account_online_sync_ar
 #: model_terms:ir.ui.view,arch_db:account_online_sync_ar.online_provider_account_form_view
 msgid ""
 "This action can not be undone. Are you sure? This can affect any other "
@@ -485,6 +506,11 @@ msgstr "Excepción Desconocida %s"
 #: model_terms:ir.ui.view,arch_db:account_online_sync_ar.online_provider_account_form_view
 msgid "Update Password"
 msgstr "Actualizar Contraseña"
+
+#. module: account_online_sync_ar
+#: model_terms:ir.ui.view,arch_db:account_online_sync_ar.online_provider_account_form_view
+msgid "Update/Fix"
+msgstr "Actualizar/Corregir"
 
 #. module: account_online_sync_ar
 #: code:addons/account_online_sync_ar/models/account_online_provider.py:0
